clusters/home/default/hass/99-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hass-deployment
  namespace: default
  labels:
    app: hass
spec:
  replicas: 1
  serviceName: hass-service
  selector:
    matchLabels:
      app: hass
  template:
    metadata:
      labels:
        app: hass
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: hass
        image: ghcr.io/home-assistant/home-assistant:2024.10.3
        ports:
        - containerPort: 8123
          protocol: TCP
        volumeMounts:
        - name: hass-config
          mountPath: /config
        - name: db-config
          mountPath: /config/database.yaml
          subPath: database.yaml
        livenessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 500
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 5
        resources:
          requests:
            memory: "512Mi"
      volumes:
      - name: hass-config
        hostPath:
          path: /mnt/shared_data/k8s/hass/config
      - name: db-config
        secret:
          secretName: hass-db-secret-hass
